--- a/productsService/package.json
+++ b/productsService/package.json
@@ -5,7 +5,7 @@
   "main": "serverless.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sls:deploy": "sls deploy"
+    "deploy": "sls deploy"
   },
   "engines": {
     "node": ">=14.15.0"
