[task-3] Add usage of async/await and handling 404 case for getProgramById endpoint

--- a/productsService/tsconfig.paths.json
+++ b/productsService/tsconfig.paths.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@functions/*": ["src/functions/*"],
+      "@models/*": ["src/models/*"],
       "@libs/*": ["src/libs/*"],
       "@localtypes/*": ["src/types/*"],
       "@mocks/*": ["src/mocks/*"],
