[task-3] Change api in order to make consistent with FE

--- a/productsService/package.json
+++ b/productsService/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "productsService",
+  "name": "products-service",
   "version": "1.0.0",
   "description": "Service for handling products info",
   "main": "serverless.ts",
