--- a/productsService/package.json
+++ b/productsService/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@middy/core": "^3.4.0",
+    "@middy/http-cors": "^4.2.6",
     "@middy/http-json-body-parser": "^3.4.0",
     "uuid": "^9.0.0"
   },
