[task-3] Add unit tests and husky

--- a/productsService/tsconfig.paths.json
+++ b/productsService/tsconfig.paths.json
@@ -1,12 +1,12 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@functions/*": ["src/functions/*"],
-      "@models/*": ["src/models/*"],
-      "@libs/*": ["src/libs/*"],
-      "@localtypes/*": ["src/types/*"],
-      "@mocks/*": ["src/mocks/*"],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@functions/*": ["src/functions/*"],
+            "@models/*": ["src/models/*"],
+            "@libs/*": ["src/libs/*"],
+            "@localtypes/*": ["src/types/*"],
+            "@mocks/*": ["src/mocks/*"]
+        }
     }
-  }
 }
