--- a/productsService/package.json
+++ b/productsService/package.json
@@ -4,9 +4,10 @@
     "description": "Service for handling products info",
     "main": "serverless.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "deploy": "sls deploy",
-        "prettier": "prettier --write src/**/*.ts src/**/*.json"
+        "prettier": "prettier --write src/**/*.ts src/**/*.json",
+        "prepare": "cd .. && husky install productsService/.husky"
     },
     "engines": {
         "node": ">=14.15.0"
@@ -18,14 +19,19 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.21.0",
         "@serverless/typescript": "^3.0.0",
         "@types/aws-lambda": "^8.10.71",
+        "@types/jest": "^29.4.0",
         "@types/node": "^14.14.25",
         "esbuild": "^0.14.11",
+        "husky": "^8.0.3",
+        "jest": "^29.4.3",
         "json-schema-to-ts": "^1.5.0",
         "prettier": "^2.8.4",
         "serverless": "^3.0.0",
         "serverless-esbuild": "^1.23.3",
+        "ts-jest": "^29.0.5",
         "ts-node": "^10.4.0",
         "tsconfig-paths": "^3.9.0",
         "typescript": "^4.1.3"
