[task-3] Add prettier config

--- a/productsService/package.json
+++ b/productsService/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "jest",
         "deploy": "sls deploy",
-        "prettier": "prettier --write src/**/*.ts src/**/*.json",
+        "prettier:check": "prettier --check src/**/*",
+        "prettier:fix": "prettier --write src/**/*",
         "prepare": "cd .. && husky install productsService/.husky"
     },
     "engines": {
