--- a/productsService/package.json
+++ b/productsService/package.json
@@ -14,6 +14,8 @@
         "node": ">=14.15.0"
     },
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.282.0",
+        "@aws-sdk/util-dynamodb": "^3.282.0",
         "@middy/core": "^3.4.0",
         "@middy/http-cors": "^4.2.6",
         "@middy/http-json-body-parser": "^3.4.0",
