--- a/productsService/package.json
+++ b/productsService/package.json
@@ -32,6 +32,7 @@
         "json-schema-to-ts": "^1.5.0",
         "prettier": "^2.8.4",
         "serverless": "^3.0.0",
+        "serverless-auto-swagger": "^2.12.0",
         "serverless-esbuild": "^1.23.3",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.4.0",
