--- a/productsService/tsconfig.paths.json
+++ b/productsService/tsconfig.paths.json
@@ -7,7 +7,8 @@
             "@libs/*": ["src/libs/*"],
             "@localtypes/*": ["src/types/*"],
             "@mocks/*": ["src/mocks/*"],
-            "@services/*": ["src/services/*"]
+            "@services/*": ["src/services/*"],
+            "@utils/*": ["src/utils/*"]
         }
     }
 }
