--- a/productsService/package.json
+++ b/productsService/package.json
@@ -19,6 +19,7 @@
         "@middy/core": "^3.4.0",
         "@middy/http-cors": "^4.2.6",
         "@middy/http-json-body-parser": "^3.4.0",
+        "mysql": "^2.18.1",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
@@ -32,7 +33,7 @@
         "json-schema-to-ts": "^1.5.0",
         "prettier": "^2.8.4",
         "serverless": "^3.0.0",
-        "serverless-auto-swagger": "^2.12.0",
+        "serverless-dotenv-plugin": "^4.0.2",
         "serverless-esbuild": "^1.23.3",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.4.0",
