--- a/importService/package.json
+++ b/importService/package.json
@@ -14,9 +14,12 @@
         "node": ">=14.15.0"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.289.0",
+        "@aws-sdk/s3-request-presigner": "^3.289.0",
         "@middy/core": "^3.4.0",
         "@middy/http-cors": "^4.2.6",
         "@middy/http-json-body-parser": "^3.4.0",
+        "csv-parser": "^3.0.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
