--- a/productsService/package.json
+++ b/productsService/package.json
@@ -2,7 +2,7 @@
     "name": "products-service",
     "version": "1.0.0",
     "description": "Service for handling products info",
-    "main": "serverless.ts",
+    "main": "serverless.yml",
     "scripts": {
         "test": "jest",
         "deploy": "sls deploy",
