[task-6] Remove redundant resources, add models and services to make bulk products creation

--- a/productsService/serverless.yml
+++ b/productsService/serverless.yml
@@ -11,8 +11,8 @@ custom:
         platform: node
         concurrency: 10
     MAIN_REGION: eu-central-1
-    STOCKS_TABLE: StocksTable
-    PRODUCTS_TABLE: ProductsTable
+    QUEUE_NAME: CatalogItemsQueue
+    SQS_QUEUE_URL: { Ref: CatalogItemsQueue }
 
 provider:
     name: aws
@@ -20,54 +20,27 @@ provider:
     region: ${self:custom.MAIN_REGION}
     environment:
         REGION: ${self:custom.MAIN_REGION}
-        PRODUCTS_TABLE: ${self:custom.PRODUCTS_TABLE}
-        STOCKS_TABLE: ${self:custom.STOCKS_TABLE}
 
     iamRoleStatements:
         - Effect: Allow
           Action:
-              - 'dynamodb:DescribeTable'
-              - 'dynamodb:Query'
-              - 'dynamodb:Scan'
-              - 'dynamodb:GetItem'
-              - 'dynamodb:PutItem'
-              - 'dynamodb:UpdateItem'
-              - 'dynamodb:DeleteItem'
-          Resource: 'arn:aws:dynamodb:${self:custom.MAIN_REGION}:*:table/*'
+              - sqs:*
+          Resource:
+              Fn::GetAtt: [CatalogItemsQueue, Arn]
 
 resources:
     Resources:
-        ProductsTable:
-            Type: AWS::DynamoDB::Table
+        CatalogItemsQueue:
+            Type: 'AWS::SQS::Queue'
             Properties:
-                TableName: ${self:custom.PRODUCTS_TABLE}
-                AttributeDefinitions:
-                    - AttributeName: id
-                      AttributeType: S
-                KeySchema:
-                    - AttributeName: id
-                      KeyType: HASH
-                ProvisionedThroughput:
-                    ReadCapacityUnits: 1
-                    WriteCapacityUnits: 1
-        StocksTable:
-            Type: AWS::DynamoDB::Table
-            Properties:
-                TableName: ${self:custom.STOCKS_TABLE}
-                AttributeDefinitions:
-                    - AttributeName: productId
-                      AttributeType: S
-                KeySchema:
-                    - AttributeName: productId
-                      KeyType: HASH
-                ProvisionedThroughput:
-                    ReadCapacityUnits: 1
-                    WriteCapacityUnits: 1
+                QueueName: sqs-${self:custom.QUEUE_NAME}-${sls:stage}.fifo
+                FifoQueue: true
 
 functions:
     - ${file('src/functions/getProductById/index.yml')}
     - ${file('src/functions/getProductList/index.yml')}
     - ${file('src/functions/createProduct/index.yml')}
+    - ${file('src/functions/catalogBatchProcess/index.yml')}
 
 plugins:
     - serverless-dotenv-plugin
