--- a/productsService/package.json
+++ b/productsService/package.json
@@ -14,8 +14,7 @@
         "node": ">=14.15.0"
     },
     "dependencies": {
-        "@aws-sdk/client-dynamodb": "^3.282.0",
-        "@aws-sdk/util-dynamodb": "^3.282.0",
+        "@aws-sdk/client-sqs": "^3.294.0",
         "@middy/core": "^3.4.0",
         "@middy/http-cors": "^4.2.6",
         "@middy/http-json-body-parser": "^3.4.0",
@@ -23,7 +22,6 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@serverless/typescript": "^3.0.0",
         "@types/aws-lambda": "^8.10.71",
         "@types/jest": "^29.4.0",
         "@types/node": "^14.14.25",
