[task-6] Add bulk saving using sqs

--- a/productsService/serverless.yml
+++ b/productsService/serverless.yml
@@ -20,6 +20,7 @@ provider:
     region: ${self:custom.MAIN_REGION}
     environment:
         REGION: ${self:custom.MAIN_REGION}
+        QUEUE_URL: ${self:custom.SQS_QUEUE_URL}
 
     iamRoleStatements:
         - Effect: Allow
