--- a/productsService/package.json
+++ b/productsService/package.json
@@ -14,6 +14,7 @@
         "node": ">=14.15.0"
     },
     "dependencies": {
+        "@aws-sdk/client-sns": "^3.294.0",
         "@aws-sdk/client-sqs": "^3.294.0",
         "@middy/core": "^3.4.0",
         "@middy/http-cors": "^4.2.6",
