[task-6] Add message filtering

--- a/productsService/src/functions/catalogBatchProcess/index.yml
+++ b/productsService/src/functions/catalogBatchProcess/index.yml
@@ -7,3 +7,10 @@ catalogBatchProcess:
                       - ${self:custom.QUEUE_NAME}
                       - Arn
               batchSize: 5
+              filterPatterns:
+                  - body:
+                        {
+                            'title': [{ 'exists': true }],
+                            'description': [{ 'exists': true }],
+                            'price': [{ 'numeric': ['>', 0] }]
+                        }
