[task-6] Add additional subscription to notify people when byd product is loaded

--- a/productsService/serverless.yml
+++ b/productsService/serverless.yml
@@ -56,6 +56,14 @@ resources:
                 Endpoint: ${env:EMAIL}
                 Protocol: email
                 TopicArn: !Ref CreateProductTopic
+        EmailSendWithFilter:
+            Type: AWS::SNS::Subscription
+            Properties:
+                Endpoint: ${env:FILTER_EMAIL}
+                Protocol: email
+                TopicArn: !Ref CreateProductTopic
+                FilterPolicyScope: MessageAttributes
+                FilterPolicy: { 'isBYDLoaded': ['yes'] }
 
 functions:
     - ${file('src/functions/getProductById/index.yml')}
