[task-7] Add custom authorizer to import endpoint

--- a/authService/serverless.yml
+++ b/authService/serverless.yml
@@ -10,6 +10,7 @@ custom:
         target: node14
         platform: node
         concurrency: 10
+    API_ID: ${opt:API_ID, 'uwg0ffvl4l'}
 
 provider:
     name: aws
@@ -17,16 +18,12 @@ provider:
     region: ${opt:region, 'eu-central-1'}
     environment:
         REGION: ${aws:region}
-        UPLOAD_BUCKET: ${self:custom.UPLOAD_BUCKET}
-        QUEUE_URL: ${self:custom.QUEUE_URL}
+        API_ARN_PATTERN: arn:aws:execute-api:${aws:region}:${aws:accountId}:${self:custom.API_ID}/*/*
 
 functions:
-    importProductsFile:
-        handler: src/functions/basicAuthorizer/handler.main
-        events:
-            - httpApi:
-                  path: /auth
-                  method: get
+    basicAuthorizer:
+        handler: src/functions/basicAuthorizer/handler.basicAuthorizer
 
 plugins:
     - serverless-esbuild
+    - serverless-dotenv-plugin
