--- a/authService/package.json
+++ b/authService/package.json
@@ -29,6 +29,7 @@
         "json-schema-to-ts": "^1.5.0",
         "prettier": "^2.8.4",
         "serverless": "^3.0.0",
+        "serverless-dotenv-plugin": "^6.0.0",
         "serverless-esbuild": "^1.23.3",
         "serverless-plugin-typescript": "^2.1.4",
         "ts-jest": "^29.0.5",
